Fixed h1 and h2 on mobile view.

--- a/styles.css
+++ b/styles.css
@@ -244,6 +244,11 @@ footer {
 /********************************************/
 
 @media screen and (max-width: 900px) {
+
+    h1, h2 {
+        text-align: center;
+    }
+
     .content {
         flex-direction: column;
         width: 100%;
